# Esoterik

./: CMakeLists.txt  README.md
Brainfuck/: CMakeLists.txt
Brainfuck/src/: Brainfuck.cpp  Brainfuck.h  Brainfuck2.cpp  Brainfuck2.h  Executable.cpp  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Symbols.h
IUseArchBTW/: CMakeLists.txt
IUseArchBTW/src/: Executable.cpp  IUseArchBtw.cpp  IUseArchBtw.h
src/: Brainfuck.cpp  Brainfuck.h  BrainfuckExe.cpp  main.cpp
